--- a/templates/exercise/exercise_list.html
+++ b/templates/exercise/exercise_list.html
@@ -22,7 +22,7 @@
             color: white;
         }
 </style>
-<div class="row pt-5 exercise-list ">
+<div class="row pt-5 exercise-list mr-5 ">
     <div class="col-md-6">
         <div class="card mb-4">
             <div class="card-body">
