--- a/templates/includes/topnav.html
+++ b/templates/includes/topnav.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="{% static 'css/module_list.css' %}">
 {% endblock %} -->
 
-<div class="row title-row pt-2 pb-2">
+<div class="row topnav pt-2 pb-2">
     <div
       class="col-md-8 btn-group"
       role="group"
