--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12 ">
+            <div class="col-md-12  header">
                 {% include 'includes/header.html' %}
             </div>
            
@@ -21,7 +21,7 @@
                 {% include 'includes/module_list.html' %}
               
             </div>
-            <div class="col-md-9 ">
+            <div class="col-md-9  pl-5 pr-5">
                 {% include 'includes/topnav.html' %}
                 
                 <div class="content">
