--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,64 +1,83 @@
 {% load static %}
 
 <style>
-    
     .navbar-brand {
         font-weight: bold;
+        color: white;
     }
     .form-inline .form-control {
-        width: 300px;
+        width: 440px;
+        background-color: white;
+        border: 1px solid #427CD4;
+        border-radius: 20px;
+        height: 45px;
+    }
+    #levelDropdown{
+        font-size: 20px;
+        font-weight:700;
+        color:#1c1c1c;
     }
     .dropdown-menu {
         right: 0;
         left: auto;
+        color: black !important;
+    }
+    .search-btn {
+        border: 1px solid #427CD4;
+        border-radius: 0px 20px 20px 0px;
+        background-color: white;
+    }
+    .fa {
+        color: #1c1c1c!important;
     }
 </style>
- 
-  
-  <nav class="navbar navbar-expand-lg navbar-light">
-   <img src="{% static 'images/logo-transparent.svg' %}" alt="Illustration" class="logo ">
-    <div class="collapse navbar-collapse ms-5">
-        <!-- Level Dropdown -->
-        <ul class="navbar-nav ">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="levelDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Level
-                </a>
-                <div class="dropdown-menu" aria-labelledby="levelDropdown">
-                    <a class="dropdown-item" href="#">Level 1</a>
-                    <a class="dropdown-item" href="#">Level 2</a>
-                    <a class="dropdown-item" href="#">Level 3</a>
+
+<nav class="navbar navbar-expand-lg navbar-light">
+    <img src="{% static 'images/logo-transparent.svg' %}" alt="Illustration" class="logo mr-5">
+    <div class="collapse navbar-collapse">
+        <!-- Search Bar and Level Dropdown in the same flex container -->
+        <div class="d-flex flex-grow-1 justify-content-center">
+            <!-- Level Dropdown -->
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="levelDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Level
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="levelDropdown">
+                        <a class="dropdown-item " href="#">Beginner</a>
+                        <a class="dropdown-item" href="#">Intermediate</a>
+                        <a class="dropdown-item" href="#">Advanced</a>
+                    </div>
+                </li>
+            </ul>
+            <!-- Search Bar -->
+            <form class="form-inline my-2 my-lg-0 mx-3">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                    <div class="input-group-append">
+                        <button class="btn search-btn" type="button">
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </div>
                 </div>
-            </li>
-        </ul>
-        <!-- Search Bar -->
-        <form class="form-inline my-2 my-lg-0 mx-auto">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search">
-                <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button">
-                        <i class="fa fa-search"></i>
-                    </button>
-                </div>
-            </div>
-           
-        </form>
+            </form>
+        </div>
         <!-- Other Elements -->
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ml-auto">
             <!-- Button -->
-            <li class="nav-item ">
-                <button class="btn quiz-button"> Take Level Quiz</button>
+            <li class="nav-item">
+                <button class="btn quiz-button">Take Level Quiz</button>
             </li>
             <!-- Notification Icon -->
             <li class="nav-item ml-2">
                 <a class="nav-link" href="#">
-                    <i class="fas fa-bell fa-lg"></i>
+                    <i class="fa fa-bell fa-lg"></i>
                 </a>
             </li>
             <!-- User Icon with Dropdown -->
-            <li class="nav-item dropdown ">
+            <li class="nav-item dropdown ml-2">
                 <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-user fa-lg"></i>
+                    <i class="fa fa-user fa-lg"></i>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                     <a class="dropdown-item" href="#">Profile</a>
@@ -70,5 +89,3 @@
         </ul>
     </div>
 </nav>
-
-
