--- a/templates/includes/module_list.html
+++ b/templates/includes/module_list.html
@@ -1,13 +1,13 @@
-<!-- {% load static %}
+<!-- {% load static %} -->
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'css/module_list.css' %}">
-{% endblock %} -->
+{% endblock %}
 
 <div class="row course-title d-flex justify-content-center pt-2 pb-2">
     <h3>Course Modules</h3>
 </div>
 <div class="accordion sidebar p-4 " id="chaptersAccordion">
- 
+
     <!-- Loop through modules -->
     {% for module in modules %}
     <div class="card">
@@ -24,7 +24,7 @@
             aria-labelledby="chapter{{ module.id }}Heading" data-parent="#chaptersAccordion">
             <div class="card-body">
                 <ul class="list-unstyled">
-                    <!-- Placeholder list items for now -->
+                    <!-- Loop through lessons of the current module -->
                     {% for lesson in module.lessons.all %}
                     <li><a href="#">{{ lesson.title }}</a></li>
                     {% endfor %}
@@ -34,6 +34,4 @@
     </div>
     {% endfor %}
 
-    
 </div>
-
