--- a/templates/level_selection.html
+++ b/templates/level_selection.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-12 text-center">
-                        <a href=""  class="btn w-50">Enroll</a>
+                        <a  href="{% url 'lessons:lesson_detail' pk=3 %}" class="btn w-50">Enroll</a>
                         
                     </div>
                 </div>
@@ -85,3 +85,4 @@
     </script>
 </body>
 </html>
+
