--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                 {% include 'includes/module_list.html' %}
               
             </div>
-            <div class="col-md-9  pl-5 pr-5">
+            <div class="col-md-9 content-section pl-5 pr-5" >
                 {% include 'includes/topnav.html' %}
                 
                 <div class="content">
