--- a/static/css/module_list.css
+++ b/static/css/module_list.css
@@ -13,9 +13,7 @@ body {
 /* .navbar{
     background-color: #427CD4;
 } */
-.course-title{
-   
-}
+
 .header{
     background-color: #365B9A!important;
 }
@@ -54,9 +52,12 @@ body {
    
 }
 
-.module_list{
+/* .module_list{
     position: fixed;
-}
+} */
+/* .content-section{
+    margin-left: 300px!important;
+} */
 .sidebar h2 {
     text-align: center;
 }
@@ -95,9 +96,10 @@ body {
 }
 
 .topnav{
-    /* border-bottom: 1px solid #D7D7D7; */
+    border-bottom: 1px solid #D7D7D7;
     color: #1c1c1c!important;
 }
+
 .content h2 {
     margin-top: 0;
 }
@@ -107,41 +109,42 @@ body {
 
 
 
-    .btn-group .btn {
-        flex: 1;
-        text-align: center;
-        border: none;
-        text-decoration: none;
-        position: relative;
-        font-weight: bold;
-        font-size: 16px;
-        padding: 10px 0;
-        cursor: pointer;
-        background: none;
-        color: white; /* Default text color */
-    }
+.btn-group .btn {
+    flex: 1;
+    text-align: center;
+    border: none;
+    text-decoration: none;
+    position: relative;
+    font-weight: bold;
+    font-size: 16px;
+    padding: 10px 0;
+    cursor: pointer;
+    background: none;
+    color: white; /* Default text color */
+}
 
-    .btn-group .btn.active {
-        color: #FFBB00 !important; /* Text color for active button */
-    }
+.btn-group .btn.active {
+    color: #FFBB00 !important; /* Text color for active button */
+}
 
-    .btn-group .btn.active::after {
-        content: '';
-        display: block;
-        position: absolute;
-        bottom: -4px; /* Adjust this value to control the underline position */
-        left: 0;
-        width: 100%;
-        height: 4px; /* Thickness of the underline */
-        background-color: #FFBB00; /* Color of the underline */
-    }
+.btn-group .btn.active::after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: -4px; /* Adjust this value to control the underline position */
+    left: 0;
+    width: 100%;
+    height: 4px; /* Thickness of the underline */
+    background-color: #FFBB00; /* Color of the underline */
+}
 
 
 .btn-group .btn:focus {
     text-decoration: none;
     box-shadow: none;
 
-}.editor-button{
+}
+.editor-button{
     background-color: #1c1c1c;
     color: white;
 }
@@ -160,3 +163,10 @@ body {
     background-color: #dfa505;
     border-radius: 6px;
 }
+.bottom-button-row{
+    border-top: 1px solid #D7D7D7!important;
+}
+.token {
+    background: skyblue !important; /* Change background color */
+}
+
