--- a/templates/exercise/module_exercise.html
+++ b/templates/exercise/module_exercise.html
@@ -1,4 +1,4 @@
-{% load static %}  <!-- Load static files at the beginning -->
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,154 +8,46 @@
     <title>Module Exercise</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="{% static 'css/module_exercise.css' %}"> -->
     {% block extra_css %}{% endblock %}
-</head>
-<style>
-        @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap');
-
-        body {
-            font-family: 'Nunito Sans', sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        .main-container {
-            background-color: #427CD4;
-            padding-top: 45px;
-            padding-right: 70px;
-            padding-bottom: 30px;
-            padding-left: 70px;
-        
-        }
-        .inner-row {
-            background-color: white;
-            border-radius: 24px;
-            /* margin: 21px; */
-        }
-        .title{
-            border-bottom: 1px solid #D7D7D7;
-        }
-        .exercise-list-button{
-        background-color: #427CD4;
-        border-radius: 10px;
-        padding-left: 10px!important;
-        color: white;
-        }
-
-
-        .exercise-list-button:hover{
-            background-color: #365B9A;
-            border-radius: 10px;
-            color: white;
-        }
-
-
-        .questions{
-            background-color: #1c1c1c;
-            color: white;
-        }
-        
-        .col-2{
-            background-color: rgb(243, 237, 212);
-        }       
-        .question-list a {
-            display: block;
-            padding: 10px;
-            color: #1c1c1c;
-            text-decoration: none;
-            
-        }
-
-        .question-list a:hover {
-            background-color: #FFBB00;
-
-        }
-        .question-content{
-            border-right: 1px solid #D7D7D7;
-        }
-        .hint-icon {
-            position: absolute;
-            top: 5px;
-            right: 10px;
-            cursor: pointer;
-        }
-
-        .input-group {
-            position: relative;
-        }
-
-        .hint-dropdown {
-            display: none;
-            position: absolute;
-            top: 40px;
-            right: 0;
-            background-color: white;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            padding: 10px;
-            z-index: 1000;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        textarea.form-control {
-            height: 400px;
-            resize: none;
-            background-color: #f7f7f7;
-        }
-
-        
-    </style>
 </head>
 <body>
     <div class="container-fluid main-container">
-        <div class="row inner-row  ">
-            <div class="col-12 ">
+        <div class="row inner-row">
+            <div class="col-12">
                 <div class="row title pt-2 pb-2">
-                    <div class="col-md-6 ">
-                        <h2 class=""> Module 1: JavaScript Basics</h2>
+                    <div class="col-md-6">
+                        <h2 class=""> {{ module.title }}</h2>
                     </div>
-                    <div class=" col-md-6 d-flex justify-content-end mt-3 ">
+                    <div class=" col-md-6 d-flex justify-content-end mt-3">
                         <button class="btn btn-outline-primary mr-2">Start Over</button>
                         <button class="btn btn-link">Exit Page</button>
                     </div>
                 </div>
                 
-                <div class="row ">
-                    <div class="col-2 question-list  ">
-                        <div class="">
+                <div class="row">
+                    <div class="col-2 question-list">
+                        <div>
                             <div class="row questions d-flex justify-content-center pt-1 pb-2">
                                 <h4>Questions</h4>
                             </div>
-                            <a href="#">Question 1</a>
-                            <a href="#">Question 2</a>
-                            <a href="#">Question 3</a>
-                            <a href="#">Question 4</a>
-                            <a href="#">Question 5</a>
-                            <a href="#">Question 6</a>
-                            <a href="#">Question 7</a>
-                            <a href="#">Question 8</a>
-                            <a href="#">Question 9</a>
-                            <a href="#">Question 10</a>
+                            {% for question in questions %}
+                                <a href="#" class="question-link" data-question-id="{{ question.id }}">{{ question.title }}</a>
+                            {% endfor %}
                         </div>
                     </div>
                     <div class="col-5 question-content">
-                       
                         <div class="mt-4">
-                            <h3>Question 1</h3>
-                            <p>JavaScript Beginner Exercise: What is JavaScript?</p>
-                            
+                            <h3 id="question-title">Question 1</h3>
+                            <p id="question-content">JavaScript Beginner Exercise: What is JavaScript?</p>
                         </div>
                         <div class="d-flex justify-content-between mt-3">
-                            <button class="btn btn-outline-primary">Skip</button>
-                        
+                            <button class="btn btn-outline-primary" id="skip-button">Skip</button>
                         </div>
                     </div>
                     <div class="col-5 pb-3 answer">
-                       
                         <div class="mt-4">
-                           
                             <div class="input-group mt-3">
-                                <textarea class="form-control" placeholder="Type your answer here..."></textarea>
+                                <textarea class="form-control" id="answer" placeholder="Type your answer here..."></textarea>
                                 <span class="hint-icon" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <i class="fas fa-lightbulb"></i>
                                 </span>
@@ -165,8 +57,7 @@
                                 </div>
                             </div>
                             <div class="d-flex justify-content-between mt-3">
-                              
-                                <button class="btn exercise-list-button">Submit</button>
+                                <button class="btn exercise-list-button" id="submit-button">Submit</button>
                             </div>
                         </div>
                     </div>
@@ -175,14 +66,41 @@
         </div>
     </div>
 
+    <!-- Include necessary JavaScript libraries -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script>
         $(document).ready(function() {
-            $('.hint-icon').on('click', function() {
-                $(this).siblings('.hint-dropdown').toggle();
+            // Function to load question details by ID
+            function loadQuestion(questionId) {
+                // Dummy data for demonstration; replace with dynamic fetching based on questionId
+                var question = {
+                    id: questionId,
+                    title: "Question " + questionId,
+                    content: "JavaScript Beginner Exercise: What is JavaScript?",
+                };
+
+                // Update question title and content
+                $('#question-title').text(question.title);
+                $('#question-content').text(question.content);
+            }
+
+            // Handle click events on question links
+            $('.question-link').on('click', function(event) {
+                event.preventDefault();
+                var questionId = $(this).data('question-id');
+                loadQuestion(questionId);
+            });
+
+            // Handle click event on submit button (for demonstration)
+            $('#submit-button').on('click', function() {
+                // Implement logic to handle submission and progression to the next question
+                // Example: Load and display the next question after submission
+                var currentQuestionId = parseInt($('#question-title').text().split(' ')[1]);
+                var nextQuestionId = currentQuestionId + 1;
+                loadQuestion(nextQuestionId);
             });
         });
     </script>
