--- a/templates/lesson_detail.html
+++ b/templates/lesson_detail.html
@@ -14,61 +14,63 @@
     }
 </style>
 
-<div class="row d-flex justify-content-end">
-    {% if previous_lesson_id %}
-        <a href="{% url 'lessons:lesson_detail' previous_lesson_id %}" class="btn ">
-            <i class="fas fa-angle-left"></i> Previous 
-        </a>
-    {% endif %}
-    
-    {% if next_lesson_id %}
-        <a href="{% url 'lessons:lesson_detail' next_lesson_id %}" class="btn ">
-            Next <i class="fas fa-angle-right"></i>
-        </a>
-    {% endif %}          
-       
-</div>
-
-
-<div class="row ">
-    <h1>{{ lesson.title }}</h1>
-    <p>{{ lesson.description }}</p>
-
-    {% for subtopic in subtopics %}
-    <h3>{{ subtopic.title }}</h3>
-    <p>{{ subtopic.notes|linebreaks }}</p> <!-- Converts line breaks to <br> tags -->
-    
-    {% if subtopic.code %}
-    <pre class="language-markup"><code>{{ subtopic.code|safe }}</code></pre>
-    {% endif %}
-    
-    {% endfor %}
-</div>
-   
-
-<div class="col-12 d-flex justify-content-between bottom-button-row mt-5 mb-5 pt-3" >
-    <div class="row">
-        <button type="button" class="btn btn-outline-primary btn-mark-read">
-            Mark as Read<i class="fas fa-check"></i><i class="fas fa-check"></i> 
-        </button>
-    </div>
-    
+<div class="col-12 content-section">
     <div class="row d-flex justify-content-end">
         {% if previous_lesson_id %}
-            <a href="{% url 'lessons:lesson_detail' previous_lesson_id %}" class="btn ">
+            <a href="{% url 'lessons:lesson_detail' module_id=lesson.module.id lesson_id=previous_lesson_id %}" class="btn ">
                 <i class="fas fa-angle-left"></i> Previous 
             </a>
         {% endif %}
         
         {% if next_lesson_id %}
-            <a href="{% url 'lessons:lesson_detail' next_lesson_id %}" class="btn ">
+            <a href="{% url 'lessons:lesson_detail' module_id=lesson.module.id lesson_id=next_lesson_id %}" class="btn ">
                 Next <i class="fas fa-angle-right"></i>
             </a>
         {% endif %}
                 
             
     </div>
-</div>
+
+
+    <div class="row ">
+        <h1>{{ lesson.title }}</h1>
+        <p>{{ lesson.description }}</p>
+
+        {% for subtopic in subtopics %}
+        <h3>{{ subtopic.title }}</h3>
+        <p>{{ subtopic.notes|linebreaks }}</p> <!-- Converts line breaks to <br> tags -->
+        
+        {% if subtopic.code %}
+        <pre class="language-markup"><code>{{ subtopic.code|safe }}</code></pre>
+        {% endif %}
+        
+        {% endfor %}
+    </div>
+   
+
+    <div class="col-12 d-flex justify-content-between bottom-button-row mt-5 mb-5 pt-3" >
+        <div class="row">
+            <button type="button" class="btn btn-outline-primary btn-mark-read">
+                Mark as Read<i class="fas fa-check"></i><i class="fas fa-check"></i> 
+            </button>
+        </div>
+        
+        <div class="row d-flex justify-content-end">
+            {% if previous_lesson_id %}
+                <a href="{% url 'lessons:lesson_detail' module_id=lesson.module.id lesson_id=previous_lesson_id %}" class="btn ">
+                    <i class="fas fa-angle-left"></i> Previous 
+                </a>
+            {% endif %}
+            
+            {% if next_lesson_id %}
+                <a href="{% url 'lessons:lesson_detail' module_id=lesson.module.id lesson_id=next_lesson_id %}" class="btn ">
+                    Next <i class="fas fa-angle-right"></i>
+                </a>
+            {% endif %}
+                    
+                
+        </div>
+    </div>
    
 </div>
 {% endblock %}
