--- a/static/css/module_exercise.css
+++ b/static/css/module_exercise.css
@@ -18,6 +18,9 @@ body {
     background-color: white;
     border-radius: 24px;
 }
+.title{
+    border-bottom: 1px solid #D7D7D7!important;
+}
 
 textarea.form-control {
     height: 250px;
