--- a/templates/exercise/exercise_list.html
+++ b/templates/exercise/exercise_list.html
@@ -23,37 +23,15 @@
         }
 </style>
 <div class="row pt-5 exercise-list ">
+    {% for module in modules %}
     <div class="col-md-6">
         <div class="card mb-4">
             <div class="card-body">
-                <h5 class="card-title">Module 1: JavaScript Basics</h5>
-                <a href="{% url 'modules:module_exercise' module_id=module.pk %}""  class="btn exercise-list-button  ps-3 pe-3 ">Start Exercise</a>
+                <h5 class="card-title">{{ module.title }}</h5>
+                <a href="{% url 'modules:module_exercise' module_id=module.id %}" class="btn exercise-list-button  ps-3 pe-3">Start Exercise</a>
             </div>
         </div>
     </div>
-    <div class="col-md-6">
-        <div class="card mb-4">
-            <div class="card-body">
-                <h5 class="card-title">Module 2: JavaScript Operators</h5>
-                <a href="{% url 'module_exercise' module_id=module.pk %}"  class="btn exercise-list-button">Start Exercise</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-6">
-        <div class="card mb-4">
-            <div class="card-body">
-                <h5 class="card-title">Module 4: JavaScript Control Flows</h5>
-                <a href="{% url 'module_exercise' module_id=module.pk %}"  class="btn exercise-list-button">Start Exercise</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-6">
-        <div class="card mb-4">
-            <div class="card-body">
-                <h5 class="card-title">JavaScript Functions</h5>
-                <a href="{% url 'module_exercise' module_id=module.pk %}"  class="btn exercise-list-button">Start Exercise</a>
-            </div>
-        </div>
-    </div>
+    {% endfor %}
 </div>
 {% endblock %}
